--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,11 @@
       </div>
 
       <div class="send">
-        <h1> Send Amount </h1>
+        <h1> Send Amount with Signature </h1>
         <input type="text" id="send-amount" placeholder="Send Amount" />
         <input type="text" id="recipient" placeholder="Recipient" />
+        <input type="text" id="signature" placeholder="Signature" />
+        <input type="text" id="recovery" placeholder="Recovery Bit" />
         <div class="button" id="transfer-amount">
           Transfer Amount
         </div>
